adopt page resolved title overlapping the image

--- a/src/assets/scss/core/_misc.scss
+++ b/src/assets/scss/core/_misc.scss
@@ -294,13 +294,7 @@ $animate: all 0.2s ease-in-out;
   }
 }
 .geekImage {
-  // padding: 9vh, 0, 0, 40vw;
-  // padding-left: 10vw;
-  // position: absolute;
   width: 30vw;
-  // float: right;
-  // bottom: 0;
-  // right: 0;
   @media (max-width: 767px) {
     display: none;
   }
@@ -321,6 +315,19 @@ $animate: all 0.2s ease-in-out;
   z-index: 1;
   @media (max-width: 767px) {
     font-size: 3.1rem;
+  }
+}
+.titleResponsiveAdopt {
+  padding-left: 20px;
+  color: white;
+  font-size: 3.8rem;
+  font-weight: 450;
+  max-width: 65vw;
+  position: relative;
+  z-index: 1;
+  @media (max-width: 767px) {
+    font-size: 3.1rem;
+    max-width: 100vw;
   }
 }
 
